--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head> <link rel="stylesheet" href="style.css">
 <body>
-    
+
+    <div class="header"></div>
+    <div class="uniform"></div>
 </body>
 </html>
